[package]
name = "custom-nosql-cdn"
version = "0.1.0"
edition = "2021"

[lib]
name = "custom_nosql_cdn"
path = "src/lib.rs"

[dependencies]
bincode = "1.3"
chrono = "0.4"
crossbeam = "0.8"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[profile.release-with-debug]
inherits = "release"
debug = true
opt-level = 3
lto = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"

